# damc_stm32

./: .clangd  .gitignore  CMakeLists.txt  README.md
DeepFilterNet/: CMakeLists.txt  README.md  add_intermediate_output_onnx.py  df_dec_preprocess_2_preprocess.onnx  enc_preprocess_2_preprocess.onnx  erb_dec_preprocess_2_preprocess.onnx  generate_input.py  requirements.txt  test.onnx  test_model.cpp  test_model.py
TinyDenoiserModel/: CMakeLists.txt  convert_to_fp16.py  test_model.cpp  test_model.py  test_windowing.cpp
src/: CMakeLists.txt
src/USB/USB_DEVICE/App/: usb_device.h
src/USB/stm32-mw-usb-device/Class/CDC/Inc/: usbd_cdc.h  usbd_cdc_if.h
src/USB/stm32-mw-usb-device/Class/CDC/Src/: usbd_cdc.c
src/USB/stm32-mw-usb-device/Class/COMPOSITE/Src/: usbd_composite.c
src/cmake/: st-project.cmake  toolchain_common.cmake  toolchain_stm32f723disco_llvm.cmake  toolchain_stm32n6570-dk_llvm.cmake
src/damc/damc_audio_processing/: CompressorFilter.cpp  CompressorFilter.h  DitheringFilter.cpp  ExpanderFilter.cpp  FilteringChain.cpp  FilteringChain.h  LoudnessMeter.cpp  PeakMeter.cpp  ResamplingFilter.cpp  TinyDenoiserFilter.cpp  TinyDenoiserFilter.h
src/damc/damc_audio_processing/TinyDenoiserModel/: README.md  model.c  model.h
src/damc/damc_common/: BiquadFilter.cpp  OscRoot.cpp  Utils.cpp  Utils.h  tinyosc.c
src/damc/damc_common/Osc/: OscArray.cpp  OscCombinedVariable.h  OscDynamicFlatArray.cpp  OscDynamicFlatArray.h  OscDynamicVariable.cpp  OscDynamicVariable.h  OscFixedArray.h  OscFlatArray.cpp  OscFlatArray.h  OscReadOnlyVariable.cpp  OscReadOnlyVariable.h  OscVariable.cpp  OscVariable.h
src/damc/damc_simple_lib/: AudioProcessor.cpp  CPUFrequencyScaling.cpp  CPUFrequencyScaling.h  CircularBuffer.h  CodecAudio.cpp  CodecAudio.h  CodecDamcHATInit.cpp  CodecDamcHATInit.h  CodecHardwareInterface.cpp  CodecHardwareInterface.h  CodecSTM32F723EDiscoInit.cpp  CodecSTM32F723EDiscoInit.h  GlitchDetection.h  LCDDrawUtils.cpp  OscStatePersist.cpp  SamplingProfiler.cpp  SamplingProfiler.h  TimeMeasure.cpp  TimeMeasure.h  USBAudioBuffers.cpp  USBAudioBuffers.h
src/memtester/: memtester.c  tests.c  types.h
src/stm32f723disco/: CMakeLists.txt  STM32F723IEKX_FLASH.ld  STM32F723IEKX_RAM.ld
src/stm32f723disco/BSP/: stm32f723e_discovery_psram.c
src/stm32f723disco/Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  syscalls.c  sysmem.c
src/stm32n6570-dk/: .mxproject  .project  CMakeLists.txt  stm32n6570-dk.ioc
src/stm32n6570-dk/Appli/: .cproject  .project  STM32N657X0HXQ_LRUN.ld  STM32N657X0HXQ_LRUN_RAMxspi1.ld  STM32N657X0HXQ_LRUN_RAMxspi2.ld  STM32N657X0HXQ_ROMxspi1.ld  STM32N657X0HXQ_ROMxspi1_RAMxspi2.ld  STM32N657X0HXQ_ROMxspi1xspi2_RAMxspi3.ld  STM32N657X0HXQ_ROMxspi2.ld  STM32N657X0HXQ_ROMxspi2_RAMxspi1.ld  STM32N657X0HXQ_ROMxspi3_RAMxspi1xspi2.ld  stm32n6570-dk_Appli.launch
src/stm32n6570-dk/Appli/Core/Inc/: main.h  stm32n6xx_hal_conf.h
src/stm32n6570-dk/Appli/Core/Src/: df_dec.c  enc.c  erb_dec.c  main.c  model.h  model_benchmark.c  model_benchmark.h  model_intrinsics.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c  syscalls.c  sysmem.c  system_stm32n6xx_s.c
src/stm32n6570-dk/Appli/Core/Startup/: startup_stm32n657x0hxq.s
src/stm32n6570-dk/FSBL/: .cproject  .project  STM32N657X0HXQ_AXISRAM2_fsbl.ld  stm32n6570-dk_FSBL Debug.launch
src/stm32n6570-dk/FSBL/Core/Inc/: main.h  stm32_extmem_conf.h  stm32n6xx_hal_conf.h
src/stm32n6570-dk/FSBL/Core/Src/: extmem_manager.c  main.c  memory_benchmark.c  memory_benchmark.h  memory_benchmark_single.s  stm32n6xx_hal_msp.c  stm32n6xx_it.c  syscalls.c  sysmem.c  system_stm32n6xx_fsbl.c
src/stm32n6570-dk/FSBL/Core/Startup/: startup_stm32n657x0hxq_fsbl.s
src/stm32n6570-dk/Middlewares/ST/STM32_ExtMem_Manager/boot/: stm32_boot_lrun.c  stm32_boot_lrun.h
